# app_tool

./: bật windows update  main.rs  watchlist.txt
app_rust/: Cargo.toml  main.rs
kill_app/: Cargo.toml
zy_sour/: Cargo.toml  main.rs
