[package]
name = "true-close"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"

windows = { version = "0.56", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"















