[package]
name = "zy_pass"
version = "2.0.0"
edition = "2021"
[build-dependencies]
winres = "0.1"

[dependencies]
arboard = "3.3"
enigo = "0.1"
argon2 = "0.5"
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

# Windows-specific: Thêm winapi features
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "processthreadsapi"] }

[profile.release]
opt-level = 3